ffmpeg: Do not print "SDP:" on top of sdp files.

Fixes ticket #7068.